sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: value filter is not a member of Int
		for(l to i<-0){
                            ^