sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2(){
	var swap=true
	var l=getNombreValeurs()-2
	while (swap){
		swap=false
		for(l to i<-0){
			for(j<-0 to i){
				if(plusPetit(j+1,j)){
				echange(j,j+1)
				swap=true
			}
			}
		}
	}
}